src/assets/global.css
@import "tailwindcss";

@theme {
  --breakpoint-md: 726px;
  --color-brand: #2a003f;
  --font-sans: "Figtree Variable", "Helvetica", "Arial", "sans-serif";
  --text-xs--line-height: 1.2;
  --text-sm--line-height: 1.2;
  --text-md--line-height: 1.2;
  --text-lg--line-height: 1.2;
  --text-xl--line-height: 1.2;
  --text-2xl--line-height: 1.2;
  --text-3xl--line-height: 1.2;
  --text-4xl--line-height: 1.2;
  --text-5xl--line-height: 1.2;
  --text-6xl--line-height: 1.2;
  --text-7xl--line-height: 1.2;
  --text-8xl--line-height: 1.2;
  --text-9xl--line-height: 1.2;
}

body {
  font-size: 20px;
  font-weight: 400;
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: #0e0016;
    color: white;
  }

  input,
  textarea {
    background-color: white;
  }
}

